--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
         run: |
           make all
 
+      - name: Run unit tests
+        run: |
+          make tests
+
       - name: clean up
         run: |
           make clean
